[package]
name = "cargo-remote-compiler"
description = "Cargo subcommand to build rust projects remotely"
keywords = ["remote", "build"]
categories = [
  "command-line-utilities",
  "development-tools::build-utils",
  "development-tools::cargo-plugins",
]
version = "0.1.0"
authors = ["Maximilian Kutschka"]
license = "MIT"
repository = "https://github.com/devmaxde/cargo-remote-compiler"
edition = "2018"
readme = "README.md"

[dependencies]
structopt = "0.3"
cargo_metadata = "0.23"
log = "0.4"
simple_logger = "5"
xdg = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15"
anyhow = "*"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
