[package]
name = "cargo-remote"
description = "Cargo subcommand to build rust projects remotely"
keywords = ["remote", "build"]
categories = [
  "command-line-utilities",
  "development-tools::build-utils",
  "development-tools::cargo-plugins",
]
version = "0.1.0"
authors = ["Maximilian Kutschka"]
license = "MIT"
repository = "https://github.com/devmaxde/cargo-remote"
edition = "2018"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
cargo_metadata = "0.23"
log = "0.4"
simple_logger = "5"
xdg = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "*"
config = "0.15"
anyhow = "*"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
inquire = { version = "*", features = [] }
regex = "1.12.2"
ping = "*"
enum_dispatch = "*"
